Fix double scroll bar on some resolutions for modal

--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -5,8 +5,10 @@
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
+  align-items: center;
+  justify-content: center;
   width: 100%; /* Full width */
-  height: auto;
+  height: 100%;
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
